# LeafOS

./: CMakeLists.txt  Makefile  README.md
boot/arrch64/: boot.S
boot/x86_64/: boot.S
kernel/: main.cpp  uefi.hpp
kernel/arch/arrch64/: linker_uefi.ld
kernel/arch/x86_64/: linker_uefi.ld
